# chrome-password-unlock

./: .gitignore  Cargo.toml  LICENSE  README.md  cleanup_old_modules.sh
.github/workflows/: release.yml
src/: crypto.rs  database.rs  keychain.rs  lib.rs  main.rs  models.rs  output.rs  profile.rs
