[package]
name = "chrome-password-unlock"
version = "0.1.0"
edition = "2024"
description = "Chrome password unlock tool - CPU (Chrome Password Unlock)"
authors = ["flyingzl"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# macOS Keychain
security-framework = "2.11"

# Table output
comfy-table = "7.1"

# Directory utilities
dirs = "5.0"
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
